// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyWalletTile component should render correctly when coupons are not present 1`] = `
<Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    color="black"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs16"
    margin={null}
    numberOfLines={null}
    text="lbl_overview_myWalletHeading"
    textDecoration={null}
  />
  <Styled(View) />
  <View>
    <Styled(BodyCopy)
      accessibilityText=""
      color="black"
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs13"
      margin={null}
      numberOfLines={null}
      text="lbl_overview_myWalletNoOfferAvailable lbl_overview_myWalletStartShop"
      textDecoration={null}
    />
    <Styled(View)>
      <Styled(Anchor)
        accessibilityLabel="lbl_overview_myWalletShopCTA"
        accessibilityRole="link"
        anchorVariation="button"
        borderColor="black"
        borderWidth="1"
        buttonVariation="variable-width"
        centered={true}
        colorName={null}
        customStyle={Object {}}
        dataLocator="accountoverview-myWallettile-startshopbtn"
        fill="WHITE"
        fullWidth={true}
        locator=""
        onPress={[Function]}
        text="lbl_overview_myWalletShopCTA"
        visible={false}
      />
    </Styled(View)>
  </View>
  <Styled(View)>
    <Styled(WithTheme(CustomButton))
      buttonVariation="variable-width"
      fill="BLUE"
      onPress={[Function]}
      text="lbl_overview_viewMyWalletCTA"
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`MyWalletTile component should render correctly when coupons are present 1`] = `
<Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    color="black"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs16"
    margin={null}
    numberOfLines={null}
    text="lbl_overview_myWalletHeading"
    textDecoration={null}
  />
  <Styled(View) />
  <Styled(View)>
    <View>
      <Styled(BodyCopy)
        accessibilityText=""
        data-locator="accountoverview-mywallettile-youhavewallettext"
        dataLocator=""
        fontSize="fs14"
        fontWeight="semibold"
        margin={null}
        numberOfLines={null}
        text="lbl_overview_myWalletOfferAvailable"
        textDecoration={null}
      />
    </View>
    <Styled(View)>
      <CouponList
        commonLabels={Object {}}
        coupons={
          Immutable.List [
            Object {},
          ]
        }
        labels={
          Object {
            "lbl_overview_myPlaceRewardsAvailable": "",
          }
        }
        sliceCount={3}
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(View)>
    <Styled(WithTheme(CustomButton))
      buttonVariation="variable-width"
      fill="BLUE"
      onPress={[Function]}
      text="lbl_overview_walletViewAllCTA"
    />
  </Styled(View)>
</Styled(View)>
`;
